<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/goBackSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/settings"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:orientation="vertical">

            <!-- Personal Settings -->
            <TextView
                android:id="@+id/personalSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#1B1B1B"
                android:padding="15dp"
                android:text="@string/personal_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textColor="@color/white" />

            <!-- Clear Cache -->
            <TextView
                android:id="@+id/clearCacheLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#1B1B1B"
                android:padding="15dp"
                android:text="@string/clear_cache"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textColor="@color/white" />

            <!-- Clear All Data -->
            <TextView
                android:id="@+id/clearAllDataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#1B1B1B"
                android:padding="15dp"
                android:text="@string/clear_all_data"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textColor="@color/white" />

            <!--Delete Account -->
            <TextView
                android:id="@+id/deleteAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="#1B1B1B"
                android:padding="15dp"
                android:text="@string/delete_account"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/versionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textColor="#D6D6D6"
                tools:text="Version : 1.0" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>