<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".PersonalProfile.SignUpActivity">

        <ImageView
            android:id="@+id/goBackSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back" />

        <LinearLayout
            android:id="@+id/upText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/join_our_family"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyDenseFilled"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_margin="10dp"
                app:endIconMode="custom"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"
                    android:textColor="#9F9F9F"
                    android:textColorHint="#9F9F9F" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyDenseFilled"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_margin="10dp"
                app:endIconMode="custom"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress|textCapWords"
                    android:maxLines="1"
                    android:textColor="#9F9F9F"
                    android:textColorHint="#9F9F9F" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyDenseFilled"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_margin="10dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#9F9F9F"
                    android:textColorHint="#9F9F9F" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyDenseFilled"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_margin="10dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reEnterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#9F9F9F"
                    android:textColorHint="#9F9F9F" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/by_clicking_create_account"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/coin_bg"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="50dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="50dp"
                    android:paddingBottom="15dp"
                    android:text="@string/create_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/progress_layout"
                    android:padding="20dp">

                    <ProgressBar
                        android:id="@+id/progressSignUp"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/are_you_an_existing_user"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/createAccountLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_txt"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privacy_policy_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="|"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/terms_and_conditions_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>