<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PersonalProfile.PrivacyPolicyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/goBackPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Privacy Policy"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/upper_txt_pp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Information Collection and Use"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_and_use_pp_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Log Data"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/log_data_pp_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Cookies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cookies_pp_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Service Providers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/service_providers_pp_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Security"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/security_pp_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Other Sites' Privacy Policies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/other_sites_links_pp_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Contact Us"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/contact_us_pp_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/white"
                    android:textStyle="normal" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>